# c_and_cpp_small_projects

./: LICENSE  README.md  mergesort.c  strtomap.cpp
c/: walk_upper.c  walker.c
c/algorithm/sort/: BubbleSort.c  string_sort.c
c/data_structures/: stack_via_array_universal_v1.c  stack_via_array_universal_v2.c
c/parsers/: simple_ini_parser.c
c/students_examples/: CountSymbolsRu.c  ID3v1TagReaderRu.c
controllers/: simple_pid.cpp
cpp/boost/walk_boost/: CMakeLists.txt
cpp/boost/walk_boost/src/: main.cpp
illustrations/: CharToIntAndBackArray.cpp
smallutilitys/: readenbooks.cpp
